--- a/Valuator/Pages/Index.cshtml
+++ b/Valuator/Pages/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Valuator.Domain.Countries
 @model IndexModel
 @{
     ViewData["Title"] = "Главная";
@@ -6,10 +7,19 @@
 
 <div class="text-center">
     <form method="post">
+        <div>Страна пользователя:</div>
+        <select name="countryIndex">
+            @for ( int index = 0; index < Model.Countries.Count; index++ )
+            {
+                Country country = Model.Countries[index];
+                <option value="@index">@country.Value</option>
+            }
+        </select>
+        
         <div class="col-2">Текст для оценки:</div>
         <div class="col-10">
             <textarea name="text" rows="5" cols="50"></textarea>
-            <input type="submit" />
+            <input type="submit"/>
         </div>
     </form>
 </div>
